fix: uses the space in the box better to prevent overflow (#368)
fixes: #253

--- a/projects/ngx-launcher/src/assets/stylesheets/shared/_cards.less
+++ b/projects/ngx-launcher/src/assets/stylesheets/shared/_cards.less
@@ -78,6 +78,7 @@
     &-column {
       display: inline-flex;
       width: 100%;
+      margin: 0;
       &-single {
         width: 100%;
       }
